# final-repo

./: .gitignore  CMakeLists.txt  README.md
docs/: Checkpoint2.plan.md  Checkpoint2_plan.md  checkpoint1_reflection.md  checkpoint1_tests.md  checkpoint2_reflection.md  checkpoint2_tests.md  checkpoint3_plan.md  checkpoint3_reflection.md  checkpoint3_tests.md  final_reflection.md  implementation_plan.md
include/: Character.h  Game.h  Inventory.h  Items.h  Map.h  NPC.h  Palace.h  Player.h  Puzzle.h  Riddle.h  RiddleNPC.h  Room.h
src/: Character.cpp  Game.cpp  Inventory.cpp  Items.cpp  Main.cpp  Map.cpp  NPC.cpp  Palace.cpp  Player.cpp  Puzzle.cpp  Riddle.cpp  RiddleNPC.cpp  Room.cpp
tests/: test_feature.cpp  test_feature1.cpp  test_feature2.cpp  test_feature3.cpp
